tests/valid/conditional_statements/if_not_taken.rs
/*
executionExitCode: 2
*/

main(): i32 {
    a: i64 = 0;
    b: i64 = 2;
    if (a)
        b = 1;
    return b;
}