tests/invalid/loops/statement_in_condition.rs
/*
fail: 1
*/

main(): i32 {
    while(a: i64) {
        2;
    }
}